# LineDetect

./: CMakeLists.txt  CircleDetect.cpp  Hline.cpp  LineDetect.cpp  LineDetectABC.cpp  LineDetectVid.cpp  LineDetectcrop.cpp.bak.cpp  Main.cpp  Record.cpp  algo  biru.cpp
include/: BlueRect.cpp  BlueRect.h  LineFollower.cpp  LineFollower.h  Utils.cpp  Utils.h
